--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: green;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -21,6 +21,22 @@
 
 .App-link {
   color: #61dafb;
+}
+.ul{
+  font-size:0;
+  padding-left:1em;
+  text-align: important;
+}
+.No-list-style{
+  list-style-type: decimal;
+  padding-left:1em;
+  list-style-position: inside;
+  float: center;
+}
+.ul_top_hypers li {
+  display: inline;
+  margin: 5em;
+
 }
 
 @keyframes App-logo-spin {
